<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/app_bar_height"
        android:gravity="center|start"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/nav_back_btn"
            style="@style/Button.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/transparent"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_keyboard_backspace_24px" />

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/title_cliente"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/title_register_cliente"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_dni"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="center|left|bottom"
                android:hint="@string/dni"
                android:inputType="number"
                android:maxLength="8"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_nombres"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="center|left|bottom"
                android:hint="@string/nombres"
                android:inputType="text"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_apellidos"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="center|left|bottom"
                android:hint="@string/apellidos"
                android:inputType="text"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="center|left|bottom"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_celular"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="center|left|bottom"
                android:hint="@string/celular"
                android:inputType="number"
                android:maxLength="9"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="center|left|bottom"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_confirmar_password"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/input_border_bottom"
                android:cursorVisible="true"
                android:gravity="center|left|bottom"
                android:hint="@string/confirmar_contraseña"
                android:inputType="textPassword"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_bar_height"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_server_login"
            style="@style/Button.Primary.Quiz.Empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:text="@string/btn_registrar"
            android:textSize="30dp" />
    </LinearLayout>
</LinearLayout>
