<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_effective"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/app_bar_height"
        android:gravity="center|start"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/nav_back_btn"
            style="@style/Button.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/transparent"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_keyboard_backspace_24px" />

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="Reservaciones"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/reservation"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="30sp"/>

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/type_reservation"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/typesreservation_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/cant_personas"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/cantpersonas_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/fecha_reserva"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="15sp"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnChangeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Date" />

            <TextView
                android:id="@+id/lblDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Date (M-D-YYYY): "
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <DatePicker
                android:id="@+id/dpResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/hora_reserva"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="15sp"/>

        <android.widget.DatePicker
            android:id="@+id/dpicker_sales_Issue_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/detalle_reserva"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="15sp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_detalle"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/input_border_bottom"
            android:cursorVisible="true"
            android:gravity="center|left|bottom"
            android:hint=""
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingBottom="10dp"
            android:textColor="@color/black_effective"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>